Fix compiler errors in NotificationFilterTestIT